--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Adding config.py file.
+config.py
+
+# Adding additional files
+Random_Numbers.ipynb
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
